fixed the tool tip by wrappiing the header in a div relative

--- a/src/components/NavbarFolder/NavbarLinks.css
+++ b/src/components/NavbarFolder/NavbarLinks.css
@@ -191,7 +191,7 @@
   padding-top: 3px;
   padding-bottom: 3px;
   --scale: 0;
-  z-index: 50;
+  z-index: 51;
 }
 
 .dataToolTip82::after {
